# smash-fix

./: .env  .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django-setup.yml
.run/: smash-fix.run.xml
bids/: events.py  models.py  serializers.py  urls.py  views.py
bids/migrations/: 0001_initial.py  0002_auto_20250712_1523.py  0003_duration_of_repair.py  0004_bid_message_bid_warranty_alter_bid_id_and_more.py  0005_alter_bid_id.py
common/: event_bus.py  events.py
event_handlers/: apps.py  job_events.py
job/: events.py  models.py  serializers.py  services.py  urls.py  views.py
job/migrations/: 0001_initial.py  0002_alter_repairjob_issue_image_video_links_and_more.py  0003_remove_repairjob_issue_image_video_links_and_more.py  0004_alter_repairjob_bid_deadline_and_more.py  0005_alter_repairjob_id.py
services/logistics/: apps.py  event_handlers.py  interfaces.py  mocks.py  models.py  serializers.py  service.py  views.py
services/notifications/: apps.py  event_handlers.py  interfaces.py  mocks.py  models.py  serializers.py  service.py  views.py
services/payments/: apps.py  event_handlers.py  events.py  exception.py  interfaces.py  mocks.py  models.py  serializers.py  service.py  urls.py  views.py
services/verification/: apps.py  interfaces.py  mock_interface_impl.py  mocks.py  models.py  serializers.py  service.py  views.py
smash_fix/: asgi.py  settings.py  urls.py  wsgi.py
user/: apps.py  event_handlers.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  (+3 more)
(+3 files in other folders)
